--- a/layouts/index.html
+++ b/layouts/index.html
@@ -15,7 +15,7 @@
           <div class="p-4 md:w-1/3">
             <div class="h-full overflow-hidden">
               <div class="overflow-hidden">
-                <img class="object-cover object-center h-full w-full sm:w-full" src="{{ .Params.Image }}" alt="{{ .Params.Title }}">
+                <img class="object-cover object-center h-full w-full" src="{{ .Params.Image }}" alt="{{ .Params.Title }}">
               </div>
               <div class="p-6">
                 <h1 class="text-xl font-medium title-font text-gray-900 mt-5">{{ .Title }}</h1>
@@ -33,7 +33,7 @@
         </div>
       </div>
 
-      {{/* 공지사항 / 보도자료 */}}    
+      {{/* 공지사항 / 보도자료 */}}
       <div class="container pb-12">
         <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">공지사항</h1>
         <div class="flex text-sm text-aa-700 py-2 border-aa-purple-500 border-b-2">
@@ -42,13 +42,15 @@
             <span class="w-1/6 text-center">작성자</span>
         </div>
         <ul class="mb-20">
-            {{ range first 3 (where site.RegularPages "Type" "connect") }}
+          {{ with .Site.GetPage "section" "connect/notice" }}
+            {{ range first 5 (where .Pages "Params.home_sticky" true ).ByDate }}
                 <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
                     <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
-                    <span class="w-1/6 text-center"><time>{{ .Date.Format "2006년 1월 2일" }}</time></span>
+                    <span class="w-1/6 text-center"><time>{{ .Params.created }}</time></span>
                     <span class="w-1/6 text-center">{{ .Params.Author_name }}</span>
                 </li>
             {{ end }}
+          {{ end }}
         </ul>
       </div>
       <div class="container pt-12 pb-12">
@@ -59,13 +61,15 @@
             <span class="w-1/6 text-center">작성자</span>
         </div>
         <ul class="mb-20">
-            {{ range first 3 (where site.RegularPages "Type" "connect") }}
+          {{ with .Site.GetPage "section" "connect/press-release" }}
+            {{ range first 5 (where .Pages "Params.home_sticky" true ).ByDate }}
                 <li class="flex py-6 border-b border-aa-gray-200 text-aa-gray-600">
                     <a class="w-4/6 px-4 text-aa-gray-700 hover:text-aa-purple-500" href="{{ .Permalink }}">{{ .Title }}</a>
-                    <span class="w-1/6 text-center"><time>{{ .Date.Format "2006년 1월 2일" }}</time></span>
+                    <span class="w-1/6 text-center"><time>{{ .Params.created }}</time></span>
                     <span class="w-1/6 text-center">{{ .Params.Author_name }}</span>
                 </li>
             {{ end }}
+          {{ end }}
         </ul>
       </div>         
       
@@ -73,18 +77,18 @@
       <div class="container pt-12">
         <div class="relative">
           <h1 class="text-4xl mb-4 text-aa-gray-900 font-bold">활동소식</h1>
-          <a class="absolute top-2 right-0 text-aa-purple-500" href="/items">최근 활동 모두보기</a>
+          <a class="absolute top-2 right-0 text-aa-purple-500" href="/actions/post/">최근 활동 모두보기</a>
         </div>
-        {{/*  <p class="text-lg mb-8 text-aa-gray-700">All / Updates / 日本語 / 기림사업 / 나비기금 / 동영상 / 소식 / 모금소식 / 생존자복지쉼터소식 / 연구조사 / 교육연대사업 / 이번 주 수요시위 / 일본국상대소송 / 장학사업 / 전시성폭력재발방지</p> */}}
         <ul class="masonry01 mb-20">
           <li class="grid-sizer"></li>
           <li class="gutter-sizer"></li>
           {{ $settings := .Site.Params }}
-          {{ range first 8 (where site.RegularPages "Type" "items") }}
+          {{ with .Site.GetPage "section" "actions/post" }}
+          {{ range first 8 (where .Pages "Params.home_sticky" true ).ByDate }}
           <li class="mb-10 grid-item">
             <a href="{{ .Permalink }}">
               <span class="overflow-hidden mr-7">
-                {{ range .Params.Components }}
+                {{ range .Params.images }}
                 {{ $fileExtension := index (last 1 (split . ".")) 0 }}
                 {{ $src := partial "base/cf-image.html" (dict "style" "thumb" "src" . "settings" $settings) }}
                 <img class="w-full" src="{{ $src }}" alt="{{ $.Title }}">
@@ -95,6 +99,7 @@
               </span>
             </a>
           </li>
+          {{ end }}
           {{ end }}
         </ul>
       </div>
